error- and success-messages are hidden via CSS instead of JS - fixes the flickering when loading pages in chrome
also brings a minimal performance improvement :)

--- a/src/main/java/assets/css/posters.css
+++ b/src/main/java/assets/css/posters.css
@@ -214,6 +214,14 @@ ul.nav li.dropdown:hover ul.dropdown-menu {
 	padding-right: 0;
 }
 
+#errorMessage {
+	display: none;
+}
+
+#successMessage {
+	display: none;
+}
+
 header {
 	background-color: #f8f8f8;
 	border-bottom: 1px solid #d3d7cf;
